# haskellTests

./: Imp.hs  Lenses.hs  quickSort.hs  state.hs  unityconversor.hs
Existencials/: DynamicTypes.hs  Has.hs
Generics/: ExNihilo.hs  GenericEq.hs  GenericOrd.hs
Indexed/: Indexed.cabal
Indexed/src/: LinState.hs
Kinds/: DataKinds.hs  Defunctualization.hs  Defunctualization2.hs  HetList.hs  NList.hs  OpenProduct1.hs  OpenProduct2.hs  OpenProduct3.hs  OpenSum.hs  Printf.hs
Monads/: Cont.hs  Either.hs  Ex_Html.hs  Except.hs  Function.hs  Identity.hs  List.hs  Maybe.hs  Prob.hs  RState.hs  RWS.hs  Reader.hs  ST.hs  State.hs  Tardis.hs  Test.hs  Writer.hs
Optics/: Fold.hs  Lens.hs
RankN/: Lens.hs
Simple/: Boolean.hs  Cardinality.hs  Traversable.hs  Unityconversor.hs
TypeApplications/: Cardinality.hs  ShowType.hs  SuperiorRanks.hs  Unityconversor.hs
