cabal-version:      3.0
name:               Indexed
version:            0.1.0.0

author:             Flávio Borin Junior
maintainer:         flavioborinjunior@gmail.com

build-type:         Simple

common warnings
    ghc-options: -Wall

executable Indexed
    import:           warnings

    main-is:          Main.hs
    
    other-modules: LinState

    build-depends:    
        base ^>=4.19.1.0
        ,indexed
        ,first-class-families
        ,do-notation

    hs-source-dirs:   app, src

    default-language: Haskell2010
